2008-03-14  smeghead <smeghead@users.sourceforge.jp>

    * 入力フォームの下に、複数行テキスト項目での、他チケットリンクとpre記法に
    ついての説明を追加した。ヘルプにも追記した。
    * 日付項目の入力支援のcalendarのバグを修正した。
    * ナビゲーションメニューの状態別チケットを状態別チケット一覧に変更した。
    * チケットの最新情報の色を変更した。

2008-03-13  smeghead <smeghead@users.sourceforge.jp>

    * 入力フィールドにmaxlengthの指定を追加した。
    * デザインをシンプルに変更した。

2008-03-07  smeghead <smeghead@users.sourceforge.jp>

    * 簡易可変文字列ユーティリティを追加した。

2008-03-06  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.5-beta リリース

2008-03-06  smeghead <smeghead@users.sourceforge.jp>

    * 日付項目の入力支援のJavaScriptカレンダーのwidthを200pxに指定するようにし
    た。


2008-03-05  smeghead <smeghead@users.sourceforge.jp>

    * チケット検索での検索結果CSVダウンロードで内容が長い場合にエラーになる問
    題を修正した。
    * 各ファイルのvimの設定用の行を修正、追加した。
    * CSVのダウンロード時のContent-Typeを、text/plainからtext/x-csvに変更した。

2008-03-03  smeghead <smeghead@users.sourceforge.jp>

    * チケット一覧の日時の秒の表示をしないようにした。 
    * チケット一覧のIDと放置日数のCSSを変更。IDは中央寄せ、放置日数は右寄せで
    表示するようにした。

2008-03-02  smeghead <smeghead@users.sourceforge.jp>

    * トップページの編集においての成形済ブロック(PRE)の記法を、チケットの複数
    行テキストでの記法に変更した。'>|\n' で始まり、'|<'で終わる領域をpreタグで
    出力するようにした。
    * labelタグのスペル違いがあったのを修正した。
    * チケット返信フォームをチケット属性が付いている項目と付いていない項目で別
    のテーブルに分割した。動作がわかり易くするため。
    * チケット履歴のレイアウトを修正した。
    * チケットリンク機能の追加。複数行テキストの項目で、#123 のように、#の後に
    数値が連続する場合に、数字をチケットIDと見做してリンクを付加するようにした
    。

2008-02-28  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールの項目設定の項目の追加時に、項目名が空のままで登録できていたバ
    グを修正した。
    * チケット履歴を見易くする修正をした。

2008-02-25  smeghead <smeghead@users.sourceforge.jp>

    * hook機能のメール送信サンプルスクリプトで、メール本文の項目の内容に改行が
    出力されないのを修正した。
    * pre記法の出力中には、改行をbrタグに変換しないように修正した。

2008-02-24  smeghead <smeghead@users.sourceforge.jp>

    * チケット項目(複数行テキスト)の値にpre記法を追加した。
    '>|\n' で始まり、'|<'で終わる領域をpreタグで出力するようにした。

2008-02-24  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.4-beta リリース

2008-02-24  smeghead <smeghead@users.sourceforge.jp>

    * チケットの項目の内容のサイズが、1024以上ある場合にエラーになるのを再現す
    るテストを追加した。